--- a/index.html
+++ b/index.html
@@ -4365,6 +4365,11 @@
     <script data-plotly="chaweewatp:1" sharekey-plotly="DYFjRDVgzBqozFyrlRYFJ7" src="https://plot.ly/embed.js" async></script>
 </div>
 
+<div>
+    <a href="https://plot.ly/~chaweewatp/3/?share_key=28xsTPzDIHKIUgB670Zk35" target="_blank" title="Plot 3" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/3.png?share_key=28xsTPzDIHKIUgB670Zk35" alt="Plot 3" style="max-width: 100%;width: 600px;"  width="600" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
+    <script data-plotly="chaweewatp:3" sharekey-plotly="28xsTPzDIHKIUgB670Zk35" src="https://plot.ly/embed.js" async></script>
+</div>
+
 
 
 
