add js for firebasebutton

--- a/index.html
+++ b/index.html
@@ -4365,7 +4365,7 @@
     <script data-plotly="chaweewatp:1" sharekey-plotly="DYFjRDVgzBqozFyrlRYFJ7" src="https://plot.ly/embed.js" async></script>
 </div>
 
-<button type="button" class="btn m-btn--square  btn-outline-info">
+<button type="button" class="btn m-btn--square  btn-outline-info" id="firebasebutton">
 						hello
 </button>
 
