--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
 
 <p>PJM 5-bus system (brute froce approach)</p>
 
-
 <div>
-    <a href="https://plot.ly/~chaweewatp/30/?share_key=12OBUyTmHCz2964HNKP6oQ" target="_blank" title="5bus-heuristic_PIPS" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/30.png?share_key=12OBUyTmHCz2964HNKP6oQ" alt="5bus-heuristic_PIPS" style="max-width: 100%;width: 600px;"  width="600" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
-    <script data-plotly="chaweewatp:30" sharekey-plotly="12OBUyTmHCz2964HNKP6oQ" src="https://plot.ly/embed.js" async></script>
+    <a href="https://plot.ly/~chaweewatp/28/?share_key=5qlYjjAqrOtyzWKDqFfLi2" target="_blank" title="5bus-PIPS" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/28.png?share_key=5qlYjjAqrOtyzWKDqFfLi2" alt="5bus-PIPS" style="max-width: 100%;width: 600px;"  width="600" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
+    <script data-plotly="chaweewatp:28" sharekey-plotly="5qlYjjAqrOtyzWKDqFfLi2" src="https://plot.ly/embed.js" async></script>
 </div>
 
+
+
+<p>PJM 5-bus system (heuristic - brute froce approach)</p>
 
 
 </body>
