add figure 118bus, PJM

--- a/index.html
+++ b/index.html
@@ -3,26 +3,32 @@
 <body>
 
 <h1>My First Heading</h1>
+<p>PJM 5-bus system</p>
 
-<p>PJM 5-bus system (brute froce approach)</p>
+<img src="fig1.png" alt="PJM 5-bus system">
+<p>Brute froce approach</p>
 <div>
     <a href="https://plot.ly/~chaweewatp/28/?share_key=5qlYjjAqrOtyzWKDqFfLi2" target="_blank" title="5bus-PIPS" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/28.png?share_key=5qlYjjAqrOtyzWKDqFfLi2" alt="5bus-PIPS" style="max-width: 80%;width: 400px;"  width="400" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
     <script data-plotly="chaweewatp:28" sharekey-plotly="5qlYjjAqrOtyzWKDqFfLi2" src="https://plot.ly/embed.js" async></script>
 </div>
 
-<p>PJM 5-bus system (heuristic - brute froce approach)</p>
+<p>Heuristic - brute froce approach</p>
 <div>
     <a href="https://plot.ly/~chaweewatp/30/?share_key=12OBUyTmHCz2964HNKP6oQ" target="_blank" title="5bus-heuristic-PIPS" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/30.png?share_key=12OBUyTmHCz2964HNKP6oQ" alt="5bus-heuristic-PIPS" style="max-width: 80%;width: 400px;"  width="400" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
     <script data-plotly="chaweewatp:30" sharekey-plotly="12OBUyTmHCz2964HNKP6oQ" src="https://plot.ly/embed.js" async></script>
 </div>
+<p>118-bus system </p>
 
-<p>118-bus system (brute froce approach)</p>
+<img src="118bus.jpg" alt="IEEE 118 bus system">
+
+<p>Brute froce approach</p>
+
 <div>
     <a href="https://plot.ly/~chaweewatp/32/?share_key=NUGm6MY1UjTZQGyLzs9lhd" target="_blank" title="118bus-PIPS" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/32.png?share_key=NUGm6MY1UjTZQGyLzs9lhd" alt="118bus-PIPS" style="max-width: 80%;width: 400px;"  width="400" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
     <script data-plotly="chaweewatp:32" sharekey-plotly="NUGm6MY1UjTZQGyLzs9lhd" src="https://plot.ly/embed.js" async></script>
 </div>
 
-<p>118-bus system (heuristic - brute froce approach)</p>
+<p>Heuristic - brute froce approach</p>
 <div>
     <a href="https://plot.ly/~chaweewatp/34/?share_key=PZnwl8U30VWXGde1ovmWxn" target="_blank" title="118bus-heuristic-PIPS" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/34.png?share_key=PZnwl8U30VWXGde1ovmWxn" alt="118bus-heuristic-PIPS" style="max-width: 80%;width: 400px;"  width="400" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
     <script data-plotly="chaweewatp:34" sharekey-plotly="PZnwl8U30VWXGde1ovmWxn" src="https://plot.ly/embed.js" async></script>
