--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </div>
 <p>118-bus system </p>
 
-<img src="118BUS.jpg" alt="IEEE 118 bus system">
+<img src="118BUS.jpeg" alt="IEEE 118 bus system">
 
 <p>Brute froce approach</p>
 
