--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
 <img src="fig1.png" alt="PJM 5-bus system">
 <p>Brute froce approach</p>
+<span id="PJM_5_bus_PIPS">
+  20
+</span>
+
 <div>
     <a href="https://plot.ly/~chaweewatp/28/?share_key=5qlYjjAqrOtyzWKDqFfLi2" target="_blank" title="5bus-PIPS" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/28.png?share_key=5qlYjjAqrOtyzWKDqFfLi2" alt="5bus-PIPS" style="max-width: 80%;width: 400px;"  width="400" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
     <script data-plotly="chaweewatp:28" sharekey-plotly="5qlYjjAqrOtyzWKDqFfLi2" src="https://plot.ly/embed.js" async></script>
@@ -34,7 +38,7 @@
     <script data-plotly="chaweewatp:34" sharekey-plotly="PZnwl8U30VWXGde1ovmWxn" src="https://plot.ly/embed.js" async></script>
 </div>
 
-
-
 </body>
+<script src="test.js"></script>
+
 </html>
