--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <img src="fig1.png" alt="PJM 5-bus system">
 <p>Brute froce approach</p>
-<span id="PJM_5_bus_PIPS">
+<span id="cal_time">
   20
 </span>
 
