add firebase script

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 
 <img src="fig1.png" alt="PJM 5-bus system">
 <p>Brute froce approach</p>
+<div>
 <span id="cal_time">
   20
 </span>
+</div>
 
 <div>
     <a href="https://plot.ly/~chaweewatp/28/?share_key=5qlYjjAqrOtyzWKDqFfLi2" target="_blank" title="5bus-PIPS" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/28.png?share_key=5qlYjjAqrOtyzWKDqFfLi2" alt="5bus-PIPS" style="max-width: 80%;width: 400px;"  width="400" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
@@ -39,6 +41,7 @@
 </div>
 
 </body>
+<script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
 <script src="test.js"></script>
 
 </html>
