--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 </div>
 
 </body>
+<script src="jquery.min.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
 <script src="test.js"></script>
 
