--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <img src="fig1.png" alt="PJM 5-bus system">
 <p>Brute froce approach</p>
 <div>
-<span id="cal_time">
+<h id="cal_time">
   20
-</span>
+</h>
 </div>
 
 <div>
@@ -25,7 +25,7 @@
 </div>
 <p>118-bus system </p>
 
-<img src="118BUS.jpeg" alt="IEEE 118 bus system">
+<img src="118BUS.jpg" alt="IEEE 118 bus system">
 
 <p>Brute froce approach</p>
 
@@ -42,7 +42,6 @@
 
 </body>
 <script src="jquery.min.js"></script>
-
 <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
 <script src="test.js"></script>
 
