--- a/index.html
+++ b/index.html
@@ -6,39 +6,35 @@
 <p>PJM 5-bus system</p>
 
 <img src="fig1.png" alt="PJM 5-bus system">
-<p>Brute froce approach</p>
+<p>Calculation time: Brute froce approach</p>
 <div>
 <h id="cal_time">
   20
 </h>
 </div>
+<p>Calculation time: Heuristic - brute froce approach</p>
 
 <div>
-    <a href="https://plot.ly/~chaweewatp/28/?share_key=5qlYjjAqrOtyzWKDqFfLi2" target="_blank" title="5bus-PIPS" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/28.png?share_key=5qlYjjAqrOtyzWKDqFfLi2" alt="5bus-PIPS" style="max-width: 80%;width: 400px;"  width="400" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
-    <script data-plotly="chaweewatp:28" sharekey-plotly="5qlYjjAqrOtyzWKDqFfLi2" src="https://plot.ly/embed.js" async></script>
+    <a href="https://plot.ly/~chaweewatp/38/?share_key=OwDxMlbuczAHOOhK9aFdVm" target="_blank" title="5bus-PIPSvsHeuristic-PIPS" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/38.png?share_key=OwDxMlbuczAHOOhK9aFdVm" alt="5bus-PIPSvsHeuristic-PIPS" style="max-width: 100%;width: 600px;"  width="600" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
+    <script data-plotly="chaweewatp:38" sharekey-plotly="OwDxMlbuczAHOOhK9aFdVm" src="https://plot.ly/embed.js" async></script>
 </div>
 
-<p>Heuristic - brute froce approach</p>
-<div>
-    <a href="https://plot.ly/~chaweewatp/30/?share_key=12OBUyTmHCz2964HNKP6oQ" target="_blank" title="5bus-heuristic-PIPS" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/30.png?share_key=12OBUyTmHCz2964HNKP6oQ" alt="5bus-heuristic-PIPS" style="max-width: 80%;width: 400px;"  width="400" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
-    <script data-plotly="chaweewatp:30" sharekey-plotly="12OBUyTmHCz2964HNKP6oQ" src="https://plot.ly/embed.js" async></script>
-</div>
+
 <p>118-bus system </p>
 
 <img src="118BUS.jpg" alt="IEEE 118 bus system">
 
-<p>Brute froce approach</p>
+<p>Calculation time: Brute froce approach</p>
 
+<p>Calculation time: Heuristic - brute froce approach</p>
 <div>
-    <a href="https://plot.ly/~chaweewatp/32/?share_key=NUGm6MY1UjTZQGyLzs9lhd" target="_blank" title="118bus-PIPS" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/32.png?share_key=NUGm6MY1UjTZQGyLzs9lhd" alt="118bus-PIPS" style="max-width: 80%;width: 400px;"  width="400" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
-    <script data-plotly="chaweewatp:32" sharekey-plotly="NUGm6MY1UjTZQGyLzs9lhd" src="https://plot.ly/embed.js" async></script>
+    <a href="https://plot.ly/~chaweewatp/124/?share_key=CnctLcJDmuHlhrt2y7q72Q" target="_blank" title="118bus-PIPSvsHeuristic-PIPS_all_bus" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/124.png?share_key=CnctLcJDmuHlhrt2y7q72Q" alt="118bus-PIPSvsHeuristic-PIPS_all_bus" style="max-width: 100%;width: 600px;"  width="600" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
+    <script data-plotly="chaweewatp:124" sharekey-plotly="CnctLcJDmuHlhrt2y7q72Q" src="https://plot.ly/embed.js" async></script>
 </div>
 
-<p>Heuristic - brute froce approach</p>
-<div>
-    <a href="https://plot.ly/~chaweewatp/34/?share_key=PZnwl8U30VWXGde1ovmWxn" target="_blank" title="118bus-heuristic-PIPS" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/34.png?share_key=PZnwl8U30VWXGde1ovmWxn" alt="118bus-heuristic-PIPS" style="max-width: 80%;width: 400px;"  width="400" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
-    <script data-plotly="chaweewatp:34" sharekey-plotly="PZnwl8U30VWXGde1ovmWxn" src="https://plot.ly/embed.js" async></script>
-</div>
+
+
+
 
 </body>
 <script src="jquery.min.js"></script>
