--- a/index.html
+++ b/index.html
@@ -378,12 +378,36 @@
     </div>
 
 </section>
+<!-- Insert plotly of 118bus HBF-BF -->
 
+<div>
+    <a href="https://plot.ly/~chaweewatp/124/?share_key=CnctLcJDmuHlhrt2y7q72Q" target="_blank" title="118bus-PIPSvsHeuristic-PIPS_all_bus" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/124.png?share_key=CnctLcJDmuHlhrt2y7q72Q" alt="118bus-PIPSvsHeuristic-PIPS_all_bus" style="max-width: 100%;width: 600px;"  width="600" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
+    <script data-plotly="chaweewatp:124" sharekey-plotly="CnctLcJDmuHlhrt2y7q72Q" src="https://plot.ly/embed.js" async></script>
+</div>
 <section class="mbr-section article mbr-section__container" id="content1-m" data-rv-view="247" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>Accuracy&nbsp;</p><p>Speed-up performance</p></div>
+            <div class="col-xs-12 lead"><p>Accuracy&nbsp;</p>
+              <table style="width:100%">
+                <tr>
+                  <th>Firstname</th>
+                  <th>Lastname</th>
+                  <th>Age</th>
+                </tr>
+                <tr>
+                  <td>Jill</td>
+                  <td>Smith</td>
+                  <td>50</td>
+                </tr>
+                <tr>
+                  <td>Eve</td>
+                  <td>Jackson</td>
+                  <td>94</td>
+                </tr>
+              </table>
+
+              <p>Speed-up performance</p></div>
         </div>
     </div>
 
