--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-
+  <style>
+  table, th, td {
+      border: 1px solid black;
+  }
+  </style>
 </head>
 <body>
   <section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background" id="header1-0" data-rv-view="0" style="background-image: url(assets/images/jumbotron.jpg);">
