add value in table

--- a/index.html
+++ b/index.html
@@ -395,19 +395,19 @@
             <div class="col-xs-12 lead"><p>Accuracy&nbsp;</p>
               <table style="width:100%">
                 <tr>
-                  <th>Firstname</th>
-                  <th>Lastname</th>
-                  <th>Age</th>
+                  <th>System</th>
+                  <th>MAE($/MWhr)</th>
+                  <th>MAPE(%)</th>
                 </tr>
                 <tr>
-                  <td>Jill</td>
-                  <td>Smith</td>
-                  <td>50</td>
+                  <td>PJM 5-bus</td>
+                  <td>1.6466576417902465e-05</td>
+                  <td>5.337334019974992e-05</td>
                 </tr>
                 <tr>
-                  <td>Eve</td>
-                  <td>Jackson</td>
-                  <td>94</td>
+                  <td>IEEE 118-bus</td>
+                  <td>0.0027926042421568546</td>
+                  <td>0.00705144530541964</td>
                 </tr>
               </table>
 
