add speed-up table

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
   table, th, td {
       border: 1px solid black;
   }
+  th, td {
+    padding: 5px;
+}
+th {
+    text-align: center;
+}
   </style>
 </head>
 <body>
@@ -411,7 +417,26 @@
                 </tr>
               </table>
 
-              <p>Speed-up performance</p></div>
+              <p>Speed-up performance</p>
+              <table style="width:100%">
+                <tr>
+                  <th>System</th>
+                  <th>F. Li and Bo (2009)</th>
+                  <th>Purpose method</th>
+                </tr>
+                <tr>
+                  <td>PJM 5-bus</td>
+                  <td>23.14%</td>
+                  <td>39.07%</td>
+                </tr>
+                <tr>
+                  <td>IEEE 118-bus</td>
+                  <td>4.29%</td>
+                  <td>54.35%</td>
+                </tr>
+              </table>
+
+            </div>
         </div>
     </div>
 
