--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ th {
 </section>
 
 <section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider3-d" data-rv-view="195" style="background-color: rgb(255, 255, 255);">
-    <div class=" container boxed-slider" style="padding-top: 40px; padding-bottom: 40px;">
+    <div class=" container boxed-slider" style="padding-top: 60px; padding-bottom: 60px;">
         <div>
             <div>
 
@@ -363,9 +363,25 @@ th {
 
 </section>
 <!-- Insert plotly of 5bus PJM HBF-BF -->
+
+<div class="mbr-section mbr-section-hero carousel-item dark center active" data-bg-video-slide="false">
+    <div class="mbr-table-cell">
+
+        <div class="container-slide">
+          <a href="https://plot.ly/~chaweewatp/127/?share_key=WcmgdMhP8HSXuZxsQGfhTt" target="_blank" title="PJM-5bus-network" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/127.png?share_key=WcmgdMhP8HSXuZxsQGfhTt" alt="PJM-5bus-network" style="max-width: 100%;width: 700px;"  width="700" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
+          <script data-plotly="chaweewatp:127" sharekey-plotly="WcmgdMhP8HSXuZxsQGfhTt" src="https://plot.ly/embed.js" async></script>            <div class="row">
+                <div class="col-md-8 col-md-offset-2 text-xs-center">
+
+
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div>
-    <a href="https://plot.ly/~chaweewatp/127/?share_key=WcmgdMhP8HSXuZxsQGfhTt" target="_blank" title="PJM-5bus-network" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/127.png?share_key=WcmgdMhP8HSXuZxsQGfhTt" alt="PJM-5bus-network" style="max-width: 100%;width: 700px;"  width="700" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
-    <script data-plotly="chaweewatp:127" sharekey-plotly="WcmgdMhP8HSXuZxsQGfhTt" src="https://plot.ly/embed.js" async></script>
+
 </div>
 
 <div>
