add slice show PJMfor

--- a/index.html
+++ b/index.html
@@ -363,31 +363,71 @@ th {
 
 </section>
 <!-- Insert plotly of 5bus PJM HBF-BF -->
+<section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider3-d" data-rv-view="195" style="background-color: rgb(255, 255, 255);">
+    <div class=" container boxed-slider" style="padding-top: 60px; padding-bottom: 60px;">
+        <div>
+            <div>
 
-<div class="mbr-section mbr-section-hero carousel-item dark center active" data-bg-video-slide="false">
-    <div class="mbr-table-cell">
+                <div class="carousel-inner" role="listbox">
+                    <div class="mbr-section mbr-section-hero carousel-item dark center active" data-bg-video-slide="false">
+                        <div class="mbr-table-cell">
 
-        <div class="container-slide">
-          <a href="https://plot.ly/~chaweewatp/127/?share_key=WcmgdMhP8HSXuZxsQGfhTt" target="_blank" title="PJM-5bus-network" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/127.png?share_key=WcmgdMhP8HSXuZxsQGfhTt" alt="PJM-5bus-network" style="max-width: 100%;width: 700px;"  width="700" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
-          <script data-plotly="chaweewatp:127" sharekey-plotly="WcmgdMhP8HSXuZxsQGfhTt" src="https://plot.ly/embed.js" async></script>            <div class="row">
-                <div class="col-md-8 col-md-offset-2 text-xs-center">
+                            <div class="container-slide">
+                              <a href="https://plot.ly/~chaweewatp/127/?share_key=WcmgdMhP8HSXuZxsQGfhTt" target="_blank" title="PJM-5bus-network" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/127.png?share_key=WcmgdMhP8HSXuZxsQGfhTt" alt="PJM-5bus-network" style="max-width: 100%;width: 700px;"  width="700" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
+                              <script data-plotly="chaweewatp:127" sharekey-plotly="WcmgdMhP8HSXuZxsQGfhTt" src="https://plot.ly/embed.js" async></script>
+                                <div class="row">
+                                    <div class="col-md-8 col-md-offset-2 text-xs-center">
 
 
 
 
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div><div class="mbr-section mbr-section-hero carousel-item dark center" data-bg-video-slide="false">
+                        <div class="mbr-table-cell">
+
+                            <div class="container-slide">
+                              <a href="https://plot.ly/~chaweewatp/38/?share_key=OwDxMlbuczAHOOhK9aFdVm" target="_blank" title="5bus-PIPSvsHeuristic-PIPS" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/38.png?share_key=OwDxMlbuczAHOOhK9aFdVm" alt="5bus-PIPSvsHeuristic-PIPS" style="max-width: 100%;width: 600px;"  width="600" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
+                              <script data-plotly="chaweewatp:38" sharekey-plotly="OwDxMlbuczAHOOhK9aFdVm" src="https://plot.ly/embed.js" async></script>
+                                <div class="row">
+                                    <div class="col-md-8 col-md-offset-1">
+
+
+
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
+                <a data-app-prevent-settings="" class="left carousel-control" role="button" data-slide="prev" href="#slider3-d">
+                    <span class="icon-prev" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a data-app-prevent-settings="" class="right carousel-control" role="button" data-slide="next" href="#slider3-d">
+                    <span class="icon-next" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
         </div>
     </div>
-</div>
-<div>
+</section>
 
+
+<!--
+<div>
+    <a href="https://plot.ly/~chaweewatp/127/?share_key=WcmgdMhP8HSXuZxsQGfhTt" target="_blank" title="PJM-5bus-network" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/127.png?share_key=WcmgdMhP8HSXuZxsQGfhTt" alt="PJM-5bus-network" style="max-width: 100%;width: 700px;"  width="700" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
+    <script data-plotly="chaweewatp:127" sharekey-plotly="WcmgdMhP8HSXuZxsQGfhTt" src="https://plot.ly/embed.js" async></script>
 </div>
 
 <div>
     <a href="https://plot.ly/~chaweewatp/38/?share_key=OwDxMlbuczAHOOhK9aFdVm" target="_blank" title="5bus-PIPSvsHeuristic-PIPS" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/38.png?share_key=OwDxMlbuczAHOOhK9aFdVm" alt="5bus-PIPSvsHeuristic-PIPS" style="max-width: 100%;width: 600px;"  width="600" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
     <script data-plotly="chaweewatp:38" sharekey-plotly="OwDxMlbuczAHOOhK9aFdVm" src="https://plot.ly/embed.js" async></script>
-</div>
+</div> -->
 
 
 <section class="mbr-section article mbr-section__container" id="content1-l" data-rv-view="245" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
