--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@ th {
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>LMP announcement (table)</p></div>
+            <div class="col-xs-12 lead"><p>This LMP sensitivity will be sent to retailer to engage with price based demand response. (Future work)</p></div>
         </div>
     </div>
 
@@ -612,7 +612,7 @@ th {
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-j" data-rv-view="241" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<!-- <section class="mbr-section article mbr-section__container" id="content1-j" data-rv-view="241" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;"> -->
 
     <div class="container">
         <div class="row">
@@ -629,15 +629,15 @@ th {
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
-                <h3 class="mbr-section-title display-2">Temp</h3>
-                <div class="lead"><p>Article header with background image and parallax effect.</p></div>
+                <h3 class="mbr-section-title display-2">Thank you</h3>
+                <div class="lead"><p>Suggestion and question</p></div>
 
             </div>
         </div>
     </div>
 
 </section>
-
+<!--
 <section class="mbr-section mbr-section__container article" id="header3-r" data-rv-view="295" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
@@ -668,7 +668,7 @@ th {
         </div>
     </div>
 
-</section>
+</section> -->
 
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-q" data-rv-view="293" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
 
