--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <script type="text/javascript" src="http://latex.codecogs.com/latexit.js"></script>
+  <script type="text/javascript">
+  LatexIT.add('p',true);
+</script>
   <style>
   table, th, td {
       border: 1px solid black;
@@ -265,7 +269,7 @@ th {
     </div>
 </section>
 <!-- purpose method detail -->
-<section class="mbr-section article mbr-section__container" id="content1-f" data-rv-view="225" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<!-- <section class="mbr-section article mbr-section__container" id="content1-f" data-rv-view="225" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -273,7 +277,7 @@ th {
         </div>
     </div>
 
-</section>
+</section> -->
 
 <section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider3-a" data-rv-view="112" style="background-color: rgb(255, 255, 255);">
     <div class=" container boxed-slider" style="padding-top: 120px; padding-bottom: 120px;">
@@ -380,7 +384,7 @@ th {
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>Make your own website in a few clicks! Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. MobiRise Website Builder creates responsive, retina and mobile friendly websites in a few clicks. Mobirise is one of the easiest website development tools <a href="http://google.com/">available</a> today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.</p></div>
+            <div class="col-xs-12 lead"><p>LMP at bus 2, 3 and 4 are differnced due to congestion between line A-B. The system marginal cost ($\lamda$) is 39.94 $/MWhr</p></div>
         </div>
     </div>
 
