add latex equation

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   <script type="text/javascript" src="http://latex.codecogs.com/latexit.js"></script>
-  <script type="text/javascript">
-  LatexIT.add('p',true);
-</script>
+
   <style>
   table, th, td {
       border: 1px solid black;
@@ -384,7 +382,8 @@ th {
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>LMP at bus 2, 3 and 4 are differnced due to congestion between line A-B. The system marginal cost ($\lamda$) is 39.94 $/MWhr</p></div>
+            <div class="col-xs-12 lead"><p>LMP at bus 2, 3 and 4 are differnced due to congestion between line A-B. The system marginal cost <div lang="latex">1+sin(x)^2+3</div>
+ is 39.94 $/MWhr</p></div>
         </div>
     </div>
 
