--- a/index.html
+++ b/index.html
@@ -17,18 +17,22 @@
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-  <script type="text/javascript" src="http://latex.codecogs.com/latexit.js"></script>
-
+  <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+  </script>
+  <script type="text/javascript"
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  </script>
   <style>
-  table, th, td {
-      border: 1px solid black;
-  }
-  th, td {
-    padding: 5px;
-}
-th {
-    text-align: center;
-}
+    table, th, td {
+        border: 1px solid black;
+    }
+    th, td {
+      padding: 5px;
+    }
+    th {
+        text-align: center;
+    }
   </style>
 </head>
 <body>
@@ -382,8 +386,7 @@ th {
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>LMP at bus 2, 3 and 4 are differnced due to congestion between line A-B. The system marginal cost <div lang="latex">1+sin(x)^2+3</div>
- is 39.94 $/MWhr</p></div>
+            <div class="col-xs-12 lead"><p>LMP at bus 2, 3 and 4 are differnced due to congestion between line A-B. The system marginal cost $1+sin(x)^2+3$is 39.94 USD/MWhr</p></div>
         </div>
     </div>
 
