--- a/index.html
+++ b/index.html
@@ -17,12 +17,6 @@
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-  <script type="text/x-mathjax-config">
-    MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
-  </script>
-  <script type="text/javascript"
-    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-  </script>
   <style>
     table, th, td {
         border: 1px solid black;
@@ -386,7 +380,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>LMP at bus 2, 3 and 4 are differnced due to congestion between line A-B. The system marginal cost $1+sin(x)^2+3$is 39.94 USD/MWhr</p></div>
+            <div class="col-xs-12 lead"><p>LMP at bus 2, 3 and 4 are differnced due to congestion between line A-B. The system marginal cost is $39.94$ USD/MWhr</p></div>
         </div>
     </div>
 
@@ -692,6 +686,12 @@
   <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/theme/js/script.js"></script>
+  <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+  </script>
+  <script type="text/javascript"
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  </script>
 
 
   <input name="animation" type="hidden">
