--- a/index.html
+++ b/index.html
@@ -380,8 +380,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>LMP at bus 2, 3 and 4 are differnced due to congestion between line A-B. The system marginal cost <img src="http://latex.codecogs.com/gif.latex?1+sin(x)" border="0"/>
-is $39.94$ USD/MWhr</p></div>
+            <div class="col-xs-12 lead"><p>LMP at bus 2, 3 and 4 are differnced due to congestion between line A-B. The system marginal cost <img src="http://latex.codecogs.com/gif.latex?\lamda" border="0"/> is 39.94 USD/MWhr</p></div>
         </div>
     </div>
 
@@ -689,5 +688,10 @@ is $39.94$ USD/MWhr</p></div>
   <script src="assets/theme/js/script.js"></script>
 
   <input name="animation" type="hidden">
+  <!-- script for latex -->
+  <script type="text/javascript" src="http://latex.codecogs.com/latexit.js"></script>
+  <script type="text/javascript">
+  LatexIT.add('p',true);
+  </script>
   </body>
 </html>
