--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>LMP at bus 2, 3 and 4 are differnced due to congestion between line A-B. The system marginal cost <img src="http://latex.codecogs.com/gif.latex?\lamda" border="0"/> is 39.94 USD/MWhr</p></div>
+            <div class="col-xs-12 lead"><p>LMP at bus 2, 3 and 4 are differnced due to congestion between line A-B. The system marginal cost $x^2$ is 39.94 USD/MWhr</p></div>
         </div>
     </div>
 
