--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>LMP at bus 2, 3 and 4 are differnced due to congestion between line A-B. The system marginal cost $x^2$ is 39.94 USD/MWhr</p></div>
+            <div class="col-xs-12 lead"><p>LMP at bus 2, 3 and 4 are differnced due to congestion between line A-B. The system marginal cost is 39.94 USD/MWhr</p></div>
         </div>
     </div>
 
@@ -612,7 +612,7 @@
 
 </section>
 
-<!-- <section class="mbr-section article mbr-section__container" id="content1-j" data-rv-view="241" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;"> -->
+<!-- <section class="mbr-section article mbr-section__container" id="content1-j" data-rv-view="241" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -620,7 +620,7 @@
         </div>
     </div>
 
-</section>
+</section>-->
 
 <section class="mbr-section article mbr-parallax-background" id="msg-box8-t" data-rv-view="299" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
 
@@ -688,10 +688,7 @@
   <script src="assets/theme/js/script.js"></script>
 
   <input name="animation" type="hidden">
-  <!-- script for latex -->
-  <script type="text/javascript" src="http://latex.codecogs.com/latexit.js"></script>
-  <script type="text/javascript">
-  LatexIT.add('p',true);
+
   </script>
   </body>
 </html>
