remove bold text in tables

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 lead"><p>Generation Parameters&nbsp;</p>
+                <div class="col-xs-12 lead"><p>Generation Parameters</p>
                   <table style="width:100%">
                     <tr>
                       <th>Gen. Name</th>
@@ -407,7 +407,7 @@
                       <th>+-450</th>
                     </tr>
                   </table>
-                  <p>Load data&nbsp;</p>
+                  <p>Load data</p>
                   <table style="width:100%">
                     <tr>
                       <th>Bus</th>
@@ -435,7 +435,7 @@
                       <th>0</th>
                     </tr>
                   </table>
-                  <p>Line data&nbsp;</p>
+                  <p>Line data</p>
                   <table style="width:100%">
                     <tr>
                       <th>Line</th>
@@ -484,8 +484,6 @@
                       <th>240</th>
                     </tr>
                   </table>
-
-
                 </div>
             </div>
         </div>
