--- a/index.html
+++ b/index.html
@@ -525,6 +525,35 @@
         </div>
     </div>
 
+    <p>Load data</p>
+    <table style="width:100%">
+      <tr>
+        <th>Bus</th>
+        <th>MW</th>
+        <th>MVar</th>
+        <th>Bus</th>
+        <th>MW</th>
+        <th>MVar</th>
+        <th>Bus</th>
+        <th>MW</th>
+        <th>MVar</th>
+      </tr>
+      <tr>
+        <th>1</th>
+        <th>51</th>
+        <th>27</th>
+        <th>2</th>
+        <th>20</th>
+        <th>9</th>
+        <th>3</th>
+        <th>39</th>
+        <th>10</th>
+      </tr>
+
+    </table>
+
+
+
 </section>
 <!-- Insert plotly of 118bus HBF-BF -->
 
