--- a/index.html
+++ b/index.html
@@ -1050,13 +1050,15 @@
     </div>
 
 </section> -->
-\$x+y\$
-<img src="http://latex.codecogs.com/gif.latex?1+sin(x)" border="0"/>
+\$x^{y}\$
+\x^{3}\
+$x^{3}$
+<img src="http://latex.codecogs.com/gif.latex?x^{3}" border="0"/>
 
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-q" data-rv-view="293" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
 
     <div class="container text-xs-center">
-        <p>\$x+y\$</p>
+        <p>\$x^{3}\$</p>
     </div>
 </footer>
 
